# playground

./: README.md  pyproject.toml
src/: pandas.ipynb
src/codility/: 01_binary_gap.py  02_cyclic_rotation.py  03_odd_occurrences_in_array.py  04_frog_jump.py  05_array_diffs.py  06_frog_river_one.py  06_prime_findswaps.py  07_perm_check.py  08_max_counter_operations.py  09_missing_integer.py  10_prime_max_mashrooms.py  11_passing_car.py  12_AtoB_divisions.py  13_dna_minimal_nucleotide.py  14_two_slice_min_avg.py  15_array_distict_val.py  16_max_productofthree.py  17_triangle_creation.py  24_equi_leader.py  anagrams.py  callable_instance.py  decorator.py  encapsulation.py  find_bigrams.py
