[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Safarnejad <safarnejad.ho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
lab = "^8.2"
pandas = "^2.2.2"
findspark = "^2.0.1"
pyspark = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
